Signed-off-by: DreamInSun <DreamInSun@github>

--- a/conf/srs.conf
+++ b/conf/srs.conf
@@ -6,7 +6,7 @@ max_connections     1000;
 
 #===== Log Setting
 srs_log_tank        file;
-srs_log_file        ./objs/srs.log;
+srs_log_file        /logs/srs.log;
 
 http_api {
     enabled         on;
@@ -56,7 +56,7 @@ vhost __defaultVhost__ {
     }    
 
     hls {
-        enabled         on;
+        enabled         off;
         hls_storage     disk;
         hls_path        ./objs/nginx/html;
         hls_m3u8_file   [app]/[stream].m3u8
