Signed-off-by: DreamInSun <DreamInSun@github>

--- a/conf/srs.conf
+++ b/conf/srs.conf
@@ -6,6 +6,7 @@ max_connections     1000;
 
 #===== Log Setting
 srs_log_tank        file;
+srs_log_level       trace;
 srs_log_file        /logs/srs.log;
 
 http_api {
@@ -50,7 +51,7 @@ vhost __defaultVhost__ {
     
     #http_flv配置
     http_remux {
-	    enabled     on;
+	    enabled     off;
 	    mount [vhost]/[app]/[stream].flv;
 	    hstrs	on;
     }    
