--- a/conf/srs.conf
+++ b/conf/srs.conf
@@ -5,7 +5,8 @@ listen              1935;
 max_connections     1000;
 
 #===== Log Setting
-srs_log_tank        file;
+daemon              off;
+srs_log_tank        console;
 srs_log_level       trace;
 srs_log_file        /logs/srs.log;
 
