Signed-off-by: DreamInSun <DreamInSun@github>

--- a/conf/srs.conf
+++ b/conf/srs.conf
@@ -5,8 +5,8 @@ listen              1935;
 max_connections     1000;
 
 #===== Log Setting
-daemon              off;
-srs_log_tank        console;
+daemon              on;
+srs_log_tank        file;
 srs_log_level       trace;
 srs_log_file        /logs/srs.log;
 
