--- a/conf/srs.conf
+++ b/conf/srs.conf
@@ -5,7 +5,7 @@ listen              1935;
 max_connections     1000;
 
 #===== Log Setting
-daemon              on;
+# daemon              on;
 srs_log_tank        file;
 srs_log_level       trace;
 srs_log_file        /logs/srs.log;
